src/test/deca/syntax/valid/synt/If.deca
// Description:
//    Programme boucle if else
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    if(true){
        "str";
    }
}
